manifests/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: '${serviceName}'
  labels:
    app: '${serviceName}'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: '${serviceName}'
  template:
    metadata:
      labels:
        app: '${serviceName}'
    spec:
      containers:
      - name: '${serviceName}'
        image: 'settawat/${serviceName}:${version_tag}'
        # envFrom:
        # - secretRef:
        #     name: '${serviceName}-${env}-secret'
