manifests/service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: 'test-cicd-service'
  namespace: 'default'
spec:
  clusterIP: None
  ports:
  - name: default
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: 'test-cicd'
  sessionAffinity: None
  type: ClusterIP
