manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: 'testcicd-ingress'
  namespace: 'default'
spec:
  rules:
  - host: 'testcicd-test.com'
    http:
      paths:
      - backend:
          serviceName: 'test-cicd-service'
          servicePort: 8080
        path: /
        pathType: ImplementationSpecific
